# identus-mediator

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .scala-steward.conf  .scalafmt.conf  CHANGELOG.md  CONTRIBUTING.md  Coordinate-Mediation-Protocol.md  LICENSE  Mediation-Flows.md  Mediator-Error_Handling.md  PUBLISH.md  README.md  TASKs.md  build.sbt  docker-compose.yaml  docker-compose.yml  initdb.js  logging.md  make-trust-ping-example-kotlin.md  make-trust-ping-example.md  mediator-identity-key-generation.md  migration_mediator_collection.js  package-lock.json  package.json  release.config.mjs  version.sbt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  (+7 more)
demo/: Dockerfile  README.md  fly.toml
did-example/: README.md
did-imp/: README.md
docs/: example.js.md  external-documentation.md  limitations.md  quickstart-basic-examples.md  quickstart-get-started.md  quickstart-setup-environment.md  readme.js.md  readme.md  test-coverage.md  test-interoperability.md  troubleshooting.md
interoperability_check/: Cargo.toml
interoperability_check/src/: lib.rs  main.rs
interoperability_check/src/did_doc/: alice.rs  bob.rs  charlie.rs  mediator1.rs  mediator2.rs  mediator3.rs  mod.rs  scala_alice.rs
interoperability_check/src/secrets/: alice.rs  bob.rs  charlie.rs  charlie_rotated_to_alice.rs  mediator1.rs  mediator2.rs  mediator3.rs  mod.rs  scala_alice.rs
multibase/: README.md
multiformats/: README.md
project/: plugins.sbt
serviceworker/: README.md
webapp/: README.md  index-fastopt.html  index-fullopt.html
(+448 files in other folders)
