[package]
name = "didcomm_interoperability_check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# didcomm = "0.4" # have a bug
# didcomm = { path = "../../didcomm-rust" }
didcomm = { git = "https://github.com/sicpa-dlab/didcomm-rust" }

anyhow = '1.0'
base64 = '0.13'
async-trait = '0.1'
thiserror = '1.0'
serde_json = '1.0'
serde-enum-str = '0.1'
sha2 = '0.9'
bs58 = "0.4.0"
varint = "0.9.0"
lazy_static = "1.4.0"
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime    


[dependencies.serde]
version = '1.0'
features = ['derive']

[dependencies.askar-crypto]
version = '0.2'
features = ['std']
git = 'https://github.com/hyperledger/aries-askar'
rev = '4f29d43d584c4a1f1f982c4511824421aeccd2db'

[dependencies.uuid]
version = "0.8"
features = ["v4"]

